{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 71,
  "lineage": "c12f0d68-0183-f406-93af-c9095b5bb04f",
  "resources": [
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:route-table/rtb-0c45113a052f99ad1",
            "default_route_table_id": "rtb-0c45113a052f99ad1",
            "id": "rtb-0c45113a052f99ad1",
            "owner_id": "145677385167",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b944e5b70546d68c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-route-main-dev",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-route-main-dev",
              "Project": "ClientA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_simple.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024ad3709f19aa30b",
            "domain": "vpc",
            "id": "eipalloc-024ad3709f19aa30b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-213-232-223.compute-1.amazonaws.com",
            "public_ip": "18.213.232.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024752fff0c28a02f",
            "domain": "vpc",
            "id": "eipalloc-024752fff0c28a02f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-205-212-87.compute-1.amazonaws.com",
            "public_ip": "34.205.212.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:internet-gateway/igw-0b944e5b70546d68c",
            "id": "igw-0b944e5b70546d68c",
            "owner_id": "145677385167",
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-igw",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-igw",
              "Project": "ClientA"
            },
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "dependencies": [
            "module.vpc_simple.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024ad3709f19aa30b",
            "connectivity_type": "public",
            "id": "nat-0c3f81df16bd8d6aa",
            "network_interface_id": "eni-01adbf662f2200b6d",
            "private_ip": "192.168.0.46",
            "public_ip": "18.213.232.223",
            "subnet_id": "subnet-082f583fa9f481342",
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-nat-01",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-nat-01",
              "Project": "ClientA"
            }
          },
          "dependencies": [
            "module.vpc_simple.aws_eip.nat",
            "module.vpc_simple.aws_subnet.public",
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024752fff0c28a02f",
            "connectivity_type": "public",
            "id": "nat-091945799c9c4f5e2",
            "network_interface_id": "eni-013d9c4e154bfdb1c",
            "private_ip": "192.168.0.62",
            "public_ip": "34.205.212.87",
            "subnet_id": "subnet-0a22f43512e409750",
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-nat-02",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-nat-02",
              "Project": "ClientA"
            }
          },
          "dependencies": [
            "module.vpc_simple.aws_eip.nat",
            "module.vpc_simple.aws_subnet.public",
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b944e5b70546d68c",
            "id": "r-rtb-0c45113a052f99ad11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c45113a052f99ad1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_simple.aws_internet_gateway.igw",
            "module.vpc_simple.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:route-table/rtb-06c797a7d464d69ac",
            "id": "rtb-06c797a7d464d69ac",
            "owner_id": "145677385167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c3f81df16bd8d6aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-rt-private",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-rt-private",
              "Project": "ClientA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_simple.aws_eip.nat",
            "module.vpc_simple.aws_nat_gateway.gw",
            "module.vpc_simple.aws_subnet.public",
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:route-table/rtb-0bbd05202f350b8be",
            "id": "rtb-0bbd05202f350b8be",
            "owner_id": "145677385167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091945799c9c4f5e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-rt-private",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-rt-private",
              "Project": "ClientA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_simple.aws_eip.nat",
            "module.vpc_simple.aws_nat_gateway.gw",
            "module.vpc_simple.aws_subnet.public",
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:route-table/rtb-0c902a00c08112399",
            "id": "rtb-0c902a00c08112399",
            "owner_id": "145677385167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b944e5b70546d68c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-rt-public",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-rt-public",
              "Project": "ClientA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_simple.aws_internet_gateway.igw",
            "module.vpc_simple.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebbdc915f4f6c8c9",
            "route_table_id": "rtb-06c797a7d464d69ac",
            "subnet_id": "subnet-08817322b25c08412"
          },
          "dependencies": [
            "module.vpc_simple.aws_eip.nat",
            "module.vpc_simple.aws_nat_gateway.gw",
            "module.vpc_simple.aws_route_table.private",
            "module.vpc_simple.aws_subnet.private",
            "module.vpc_simple.aws_subnet.public",
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6b49671aabead21",
            "route_table_id": "rtb-0bbd05202f350b8be",
            "subnet_id": "subnet-050b40c77b5134247"
          },
          "dependencies": [
            "module.vpc_simple.aws_eip.nat",
            "module.vpc_simple.aws_nat_gateway.gw",
            "module.vpc_simple.aws_route_table.private",
            "module.vpc_simple.aws_subnet.private",
            "module.vpc_simple.aws_subnet.public",
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0204fb89997122e60",
            "route_table_id": "rtb-0c902a00c08112399",
            "subnet_id": "subnet-082f583fa9f481342"
          },
          "dependencies": [
            "module.vpc_simple.aws_internet_gateway.igw",
            "module.vpc_simple.aws_route_table.public",
            "module.vpc_simple.aws_subnet.public",
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08479d11003c1d520",
            "route_table_id": "rtb-0c902a00c08112399",
            "subnet_id": "subnet-0a22f43512e409750"
          },
          "dependencies": [
            "module.vpc_simple.aws_internet_gateway.igw",
            "module.vpc_simple.aws_route_table.public",
            "module.vpc_simple.aws_subnet.public",
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:subnet/subnet-08817322b25c08412",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08817322b25c08412",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145677385167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-subnet-private-01",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-subnet-private-01",
              "Project": "ClientA"
            },
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "dependencies": [
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:subnet/subnet-050b40c77b5134247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050b40c77b5134247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145677385167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-subnet-private-02",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-subnet-private-02",
              "Project": "ClientA"
            },
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "dependencies": [
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:subnet/subnet-082f583fa9f481342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082f583fa9f481342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145677385167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-subnet-public-00",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-subnet-public-00",
              "Project": "ClientA"
            },
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "dependencies": [
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:subnet/subnet-0a22f43512e409750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a22f43512e409750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145677385167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-subnet-public-01",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-subnet-public-01",
              "Project": "ClientA"
            },
            "vpc_id": "vpc-0b4aab27d5a4a0f25"
          },
          "dependencies": [
            "module.vpc_simple.aws_vpc.main",
            "module.vpc_simple.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_simple",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145677385167:vpc/vpc-0b4aab27d5a4a0f25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-04e19e40470d80e65",
            "default_route_table_id": "rtb-0c45113a052f99ad1",
            "default_security_group_id": "sg-00a4610132d4edd2d",
            "dhcp_options_id": "dopt-0f8cbc59e192ce736",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b4aab27d5a4a0f25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c45113a052f99ad1",
            "owner_id": "145677385167",
            "tags": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-vpc",
              "Project": "ClientA"
            },
            "tags_all": {
              "Applictation": "Microservice",
              "Builder": "Terraform",
              "Environment": "Development",
              "ModificationDate": "2022-03-26T14:34:07Z",
              "Name": "teste-dev-vpc",
              "Project": "ClientA"
            }
          }
        }
      ]
    }
  ]
}